# mimree_description

./: CMakeLists.txt  README.md  package.xml
launch/: mangalia.launch
meshes/mimree_asv/: boat_base.stl
meshes/mimree_uav/: 3DXR_IND1000_Body_collision_box.dae
src/mimree_description/: edge_wt_detector.cpp  laser_to_pc.cpp  mimree_tf_broadcaster.cpp
urdf/: halcyon.urdf  hector.urdf
